--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,60 @@
 /* Général */
 body {
-  margin: 0;
+  margin: 0 20px;
   padding: 0;
+}
+/* Spaces */
+.small-space {
+    height: 20px;
+}
+.medium-space {
+    height: 40px;
+}
+.large-space {
+    height: 100px;
+}
+
+/* Colors */
+.yellow-accent {
+    background-color: #ffca28;
+}
+.blue-accent {
+    background-color: #40C4FF;
+}
+.blue-bg {
+    background-color: #06aed5;
+}
+.red-error {
+    background-color: #ff1744;
+}
+/* TextColors */
+.text-black87 {
+    color: rgba(0, 0, 0, 0.87);
+}
+.text-black54 {
+    color: rgba(0, 0, 0, 0.54);
+}
+.text-black38 {
+    color: rgba(0, 0, 0, 0.38);
+}
+.text-white100 {
+    color: rgba(255, 255, 255, 1);
+}
+
+/* Containers */
+.box.classic {
+    padding: 40px 20px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
+    border-radius: 20px;
+}
+.box.invisible {
+    padding: 40px 20px;
+}
+.box.image {
+    border-radius: 20px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
+}
+.box.circle-image {
+    border-radius: 50%;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
 }
