--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,20 @@
 /* Général */
+
 body {
-  margin: 0 auto;
-  padding: 0;
-  width: 90%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
+    margin: 0 auto;
+    padding: 0;
+    width: 90%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
 }
 
 #bande {
     position: fixed;
-    height: 100%;
+    height: 0%;
     right: 5%;
     z-index: -1;
+    -webkit-transition: height 1s cubic-bezier(0.4,0,0.2,1);
+    transition: height 1s cubic-bezier(0.4,0,0.2,1);
 }
 
 img.icon {
@@ -22,11 +25,26 @@ img.icon {
     vertical-align: baseline;
 }
 
+.to_anim {
+    -webkit-transition: -webkit-transform 1s cubic-bezier(0.4,0,0.2,1);
+    transition: -webkit-transform 1s cubic-bezier(0.4,0,0.2,1);
+    transition: transform 1s cubic-bezier(0.4,0,0.2,1);
+    transition: transform 1s cubic-bezier(0.4,0,0.2,1), -webkit-transform 1s cubic-bezier(0.4,0,0.2,1);
+}
+.fr_left {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+}
+.fr_right {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+}
+
 /* Fonts */
+
 @font-face {
     font-family: 'headache';
-    src: url('headache-font-otf-webfont.woff2') format('woff2'),
-         url('headache-font-otf-webfont.woff') format('woff');
+    src: url('headache-font-otf-webfont.woff2') format('woff2'), url('headache-font-otf-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -34,52 +52,71 @@ img.icon {
 .headache {
     font-family: 'headache';
 }
+
 h1, h2, h3, h4, h5, h6 {
     color: rgba(0, 0, 0, 0.87);
 }
+
+
 /* TextColors */
+
 .text-black87 {
     color: rgba(0, 0, 0, 0.87);
 }
+
 .text-black54 {
     color: rgba(0, 0, 0, 0.54);
 }
+
 .text-black38 {
     color: rgba(0, 0, 0, 0.38);
 }
+
 .text-white100 {
     color: rgba(255, 255, 255, 1);
 }
 
+
 /* Spaces */
+
 .small-space {
     height: 1.85vh;
 }
+
 .medium-space {
     height: 3.7vh;
 }
+
 .large-space {
     height: 9.25vh;
 }
 
+
 /* Colors */
+
 .yellow-accent {
     background-color: #ffca28;
 }
+
 .blue-accent {
     background-color: #40C4FF;
 }
+
 .blue-bg {
     background-color: #06aed5;
 }
+
 .red-error {
     background-color: #ff1744;
 }
+
 .white-bg {
     background-color: #fff;
 }
 
+
 /* Menu */
+
 menu {
     position: fixed;
     top: 0;
@@ -92,63 +129,78 @@ menu {
     z-index: 100;
     margin: 0;
     padding: 0 5%;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
 }
 
-.languages {
+#languages {
     position: absolute;
     height: 9.25vh;
     line-height: 9.25vh;
     top: 0;
     left: 5%;
+    -webkit-transition: opacity .25s cubic-bezier(0.4, 0.0, 0.2, 1);
+    transition: opacity .25s cubic-bezier(0.4, 0.0, 0.2, 1);
 }
-.languages img {
+
+#languages img {
     height: 4vh;
     width: auto;
     vertical-align: middle;
 }
-.languages img.disable {
+
+#languages img.disable {
     opacity: .3;
 }
 
+
 /* Containers */
+
 .box.classic {
     padding: 3.7vh 1vw;
-    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
-            box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
     border-radius: 20px;
     height: 100%;
 }
+
 .box.invisible {
     padding: 3.7vh 1vw;
     height: 100%;
 }
+
 .box.image {
     border-radius: 20px;
-    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
-            box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
     overflow: hidden;
     position: relative;
 }
+
 .box.image img {
     width: 100%;
     height: auto;
     vertical-align: middle;
 }
+
 .box.image.img_full_height img {
     height: 100%;
     width: auto;
 }
+
 .box.image h2 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     z-index: 2;
 }
+
 .box.image.w_shadow:after {
     content: "";
     display: block;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0)));
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
     position: absolute;
     top: 0;
@@ -157,39 +209,59 @@ menu {
     left: 0;
     z-index: 1;
 }
+
+.box.image.hoverable {
+    cursor: pointer;
+    -webkit-transition: -webkit-box-shadow .3s cubic-bezier(0.4,0,0.2,1);
+    transition: -webkit-box-shadow .3s cubic-bezier(0.4,0,0.2,1);
+    transition: box-shadow .3s cubic-bezier(0.4,0,0.2,1);
+    transition: box-shadow .3s cubic-bezier(0.4,0,0.2,1), -webkit-box-shadow .3s cubic-bezier(0.4,0,0.2,1);
+}
+.box.image.hoverable:hover {
+    -webkit-box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.66);
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.66);
+}
+
 .box.image.circle {
     border-radius: 50%;
-    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
-            box-shadow: 2px 2px 6px rgba(0,0,0,0.33);
-    height: calc( ((88vw - 20px) * 2/12) - 20px );
+    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
+    height: calc( ((88vw - 20px) * 2/12) - 20px);
 }
+
 .box.image.circle img {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
+
 .box.image.social {
     width: 7vw;
     height: 7vw;
     line-height: 7vw;
     display: inline-block;
 }
+
 .box.image.social img {
     width: 70%;
 }
+
 .box.message-me {
     padding: 3.7vh 1vw;
     margin-left: 8.3333%;
     border-radius: 20px;
     position: relative;
 }
+
 .box.message-me:before {
     content: "";
     display: block;
     position: absolute;
     left: -1vh;
     top: 30%;
+    -webkit-transform: translateY(-50%) rotate(45deg);
     transform: translateY(-50%) rotate(45deg);
     width: 0;
     height: 0;
@@ -199,28 +271,35 @@ menu {
     border-bottom: 10vh solid #06aed5;
 }
 
+
 /* Height */
+
 .size30vw {
     height: 30vw;
 }
 
+
 /* Button */
+
 .button {
-    -webkit-appearance : none;
+    -webkit-appearance: none;
     padding: 1.85vh 5vw;
-    background-color: transparent ;
+    background-color: transparent;
     border-radius: 40px;
     border: 2px solid #40C4FF;
     color: #40C4FF;
     font-size: calc(1vw + .5vh + .5rem);
     font-weight: bold;
 }
+
+
 /* Form */
+
 .rp_input {
-    -webkit-appearance:none;
+    -webkit-appearance: none;
     width: 100%;
     padding: 1.85vh 2vw;
-    background-color: transparent ;
+    background-color: transparent;
     border-radius: 40px;
     border: 2px solid rgba(0, 0, 0, 0.2);
     color: rgba(0, 0, 0, 0.87);
@@ -228,6 +307,7 @@ menu {
     font-weight: lighter;
     outline: none;
 }
+
 .rp_input:valid {
     border: 2px solid rgba(0, 0, 0, 0.05);
 }
