--- a/style/style.css
+++ b/style/style.css
@@ -160,10 +160,17 @@ menu {
     opacity: .3;
 }
 
+menu .items {
+    -webkit-transition: -webkit-transform .3s cubic-bezier(0.4,0,0.2,1);
+    transition: -webkit-transform .3s cubic-bezier(0.4,0,0.2,1);
+    transition: transform .3s cubic-bezier(0.4,0,0.2,1);
+    transition: transform .3s cubic-bezier(0.4,0,0.2,1), -webkit-transform .3s cubic-bezier(0.4,0,0.2,1);
+}
 menu .items .item {
     cursor: pointer;
     display: inline-block;
-    transition: font-weight .3s cubic-bezier(0.4,0,0.2,1);
+    -webkit-transition: font-weight .3s;
+    transition: font-weight .3s;
 }
 
 
