--- a/style/simpleGrid/href/simpleGrid.css
+++ b/style/simpleGrid/href/simpleGrid.css
@@ -124,3 +124,86 @@ html, body {
     border-radius: 1px;
     margin-bottom: 20px;
 }
+
+@media (orientation:portrait) {
+    .col.po-1 {
+        width: 8.3333%;
+    }
+    .col.po-2 {
+        width: 16.6666%;
+    }
+    .col.po-3 {
+        width: 24.9999%;
+    }
+    .col.po-4 {
+        width: 33.3333%;
+    }
+    .col.po-5 {
+        width: 41.6666%;
+    }
+    .col.po-6 {
+        width: 50%;
+    }
+    .col.po-7 {
+        width: 58.3333%;
+    }
+    .col.po-8 {
+        width: 66.6666%;
+    }
+    .col.po-9 {
+        width: 74.9999%;
+    }
+    .col.po-10 {
+        width: 83.3333%;
+    }
+    .col.po-11 {
+        width: 91.6665%;
+    }
+    .col.po-12 {
+        width: 100%;
+    }
+
+    .col.offset-po-0 {
+        margin-left: -5px;
+    }
+    .col.offset-po-1 {
+        margin-left: 8.3333%;
+    }
+    .col.offset-po-2 {
+        margin-left: 16.6666%;
+    }
+    .col.offset-po-3 {
+        margin-left: 24.9999%;
+    }
+    .col.offset-po-4 {
+        margin-left: 33.3333%;
+    }
+    .col.offset-po-5 {
+        margin-left: 41.6666%;
+    }
+    .col.offset-po-6 {
+        margin-left: 50%;
+    }
+    .col.offset-po-7 {
+        margin-left: 58.3333%;
+    }
+    .col.offset-po-8 {
+        margin-left: 66.6666%;
+    }
+    .col.offset-po-9 {
+        margin-left: 74.9999%;
+    }
+    .col.offset-po-10 {
+        margin-left: 83.3333%;
+    }
+    .col.offset-po-11 {
+        margin-left: 91.6665%;
+    }
+    .col.offset-po-12 {
+        margin-left: 100%;
+    }
+
+    .col.po-no-margin {
+        margin-bottom: 0;
+    }
+}
