--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,9 @@ img.icon {
     vertical-align: baseline;
 }
 
+a:any-link {
+    color: #40C4FF;
+}
 
 /* Animation*/
 
@@ -200,6 +203,7 @@ menu .items .item {
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.33);
     overflow: hidden;
     position: relative;
+    text-align: center;
 }
 
 .box.image img {
@@ -323,11 +327,12 @@ button {
 .icon-button {
     border-radius: 50%;
     width: 100%;
-    height: calc(((88vw - 20px)*2/12) - 20px);
+    height: calc((88vw - 20px)*2/12);
     padding: 0;
 }
 .icon-button img {
-    width: 80%;
+    width: 70%;
+    vertical-align: middle;
 }
 
 
@@ -355,9 +360,6 @@ button {
 
 @media (orientation:portrait) {
     /* Menu */
-    menu {
-        padding: 0;
-    }
     #languages img:not(.disable) {
         display: none;
     }
