--- a/style/simpleGrid/href/simpleGrid.css
+++ b/style/simpleGrid/href/simpleGrid.css
@@ -103,6 +103,9 @@ html, body {
 .col.no-margin {
     margin-bottom: 0;
 }
+.col.no-padding {
+    padding: 0;
+}
 .col.full-height {
     height: 100%;
 }
@@ -206,8 +209,11 @@ html, body {
         margin-left: 100%;
     }
 
-    .col.po-no-margin {
+    .col.po-no-bottom-margin {
         margin-bottom: 0;
+    }
+    .col.po-no-left-margin {
+        margin-left: 0;
     }
 }
 
