Correction probleme affichage petit appareil mode paysage

--- a/style/simpleGrid/href/simpleGrid.css
+++ b/style/simpleGrid/href/simpleGrid.css
@@ -132,8 +132,11 @@ html, body {
 }
 
 @media (orientation:portrait) {
-    .col.po-0 {
+    .col.po-0, .col.po-0.xs-0 {
         display: none;
+    }
+    .col.po-block {
+        display: inline-block;
     }
     .col.po-1 {
         width: 8.3333%;
@@ -218,16 +221,93 @@ html, body {
     .col.po-no-left-margin {
         margin-left: 0;
     }
-}
 
-@media (orientation:portrait) {
     .col.xs-0 {
-        display: block;
+        display: inline-block;
     }
 }
 
-@media (orientation:landscape) {
-    .col.xs-0 {
-        display: block;
+@media (min-width:801px) {
+    .col.md-0 {
+        display: none;
+    }
+    .col.md-block {
+        display: inline-block;
+    }
+    .col.md-1 {
+        width: 8.3333%;
+    }
+    .col.md-2 {
+        width: 16.6666%;
+    }
+    .col.md-3 {
+        width: 24.9999%;
+    }
+    .col.md-4 {
+        width: 33.3333%;
+    }
+    .col.md-5 {
+        width: 41.6666%;
+    }
+    .col.md-6 {
+        width: 50%;
+    }
+    .col.md-7 {
+        width: 58.3333%;
+    }
+    .col.md-8 {
+        width: 66.6666%;
+    }
+    .col.md-9 {
+        width: 74.9999%;
+    }
+    .col.md-10 {
+        width: 83.3333%;
+    }
+    .col.md-11 {
+        width: 91.6665%;
+    }
+    .col.md-12 {
+        width: 100%;
+    }
+
+    .col.offset-md-0 {
+        margin-left: -5px;
+    }
+    .col.offset-md-1 {
+        margin-left: 8.3333%;
+    }
+    .col.offset-md-2 {
+        margin-left: 16.6666%;
+    }
+    .col.offset-md-3 {
+        margin-left: 24.9999%;
+    }
+    .col.offset-md-4 {
+        margin-left: 33.3333%;
+    }
+    .col.offset-md-5 {
+        margin-left: 41.6666%;
+    }
+    .col.offset-md-6 {
+        margin-left: 50%;
+    }
+    .col.offset-md-7 {
+        margin-left: 58.3333%;
+    }
+    .col.offset-md-8 {
+        margin-left: 66.6666%;
+    }
+    .col.offset-md-9 {
+        margin-left: 74.9999%;
+    }
+    .col.offset-md-10 {
+        margin-left: 83.3333%;
+    }
+    .col.offset-md-11 {
+        margin-left: 91.6665%;
+    }
+    .col.offset-md-12 {
+        margin-left: 100%;
     }
 }
