--- a/style/simpleGrid/href/simpleGrid.css
+++ b/style/simpleGrid/href/simpleGrid.css
@@ -109,7 +109,7 @@ html, body {
 .col.no-padding {
     padding: 0;
 }
-.col.full-height {
+.col.full-height, .row.full-height {
     height: 100%;
 }
 
@@ -119,6 +119,9 @@ html, body {
 }
 .text-right {
     text-align: right;
+}
+.text-left {
+    text-align: left;
 }
 .text-justify {
     text-align: justify;
