--- a/style/style.css
+++ b/style/style.css
@@ -409,6 +409,21 @@ textarea.rp_input {
     height: calc(100% - 22px);
 }
 
+/* Form contact display */
+#contact_form {
+    overflow: hidden;
+}
+#message_end {
+    display: none;
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    -webkit-transition: opacity 1s cubic-bezier(.2,0,.4,1), -webkit-transform 1s cubic-bezier(.2,0,.4,1);
+    transition: opacity 1s cubic-bezier(.2,0,.4,1), -webkit-transform 1s cubic-bezier(.2,0,.4,1);
+    transition: transform 1s cubic-bezier(.2,0,.4,1), opacity 1s cubic-bezier(.2,0,.4,1);
+    transition: transform 1s cubic-bezier(.2,0,.4,1), opacity 1s cubic-bezier(.2,0,.4,1), -webkit-transform 1s cubic-bezier(.2,0,.4,1);
+}
+
 
 /* Fixed contact form */
 
@@ -425,7 +440,7 @@ textarea.rp_input {
     display: none;
     overflow: hidden;
     -webkit-transition: background-color .5s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: background-color .5s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color .5s cubic-bezier(0.4, 0, 0.2, 1), opacity 1s cubic-bezier(0.4, 0, 0.2, 1), top 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #fixed_form {
